# event-horizon

./: .gitignore  EVH_Prefix.pch  EventHorizon.sln  Info.plist  Plugin-Info.plist  README.md  Ship AI.txt
CMake/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
CMake/cpp/: ai.cpp  ai.h  aiagressor.cpp  aiagressor.h  aimerchant.cpp  aimerchant.h  aiwimp.cpp  aiwimp.h  asteroid.cpp  asteroid.h  background.cpp  background.h  cargo.h  controller.cpp  controller.h  coord.cpp  coord.h  ehbutton.cpp  ehbutton.h  ehmenuitem.cpp  ehmenuitem.h  ehobject.h  government.cpp  government.h  main.cpp  mission.cpp  mission.h  mod.cpp  mod.h  obj.cpp  obj.h  object3D.cpp  object3D.h  planet.cpp  planet.h  player.cpp  player.h  plugin.cpp  plugin.h  shader.cpp  (+19 more)
English.lproj/: InfoPlist.strings
Event Horizon.xcodeproj/: alistairlynn.pbxuser  alistairlynn.perspective  paul.mode1  paul.mode1v3  paul.pbxuser  project.pbxproj
Images/: Icon.icns  NavPlanet.tiff
Resources/: Forklift.mtl
Resources/MainMenu.nib/: classes.nib  info.nib  objects.nib
Resources/MainMenu.nib/CVS/: Entries  Repository  Root
Windows/: Windows.vcxproj  Windows.vcxproj.filters
cpp/: asteroid.cpp  controller.cpp  controller.h  coord.cpp  coord.h  ehmenuitem.cpp  main.cpp  obj.h  player.h  shieldspot.cpp  solarsystem.cpp  spaceobject.cpp  spaceobject.h  spaceship.h  texture.cpp  texture.h
evh/: AI.h  AI.m  AggressorAI.h  AggressorAI.m  Asteroid.h  Asteroid.m  Background.h  Background.m  BackgroundMusic.h  BackgroundMusic.m  Board.h  Board.m  Cargo.h  Cargo.m  Console.h  Console.m  Controller.h  Controller.m  ControllerGraphics.h  ControllerGraphics.m  ControllerMenu.h  ControllerMenu.m  ControllerScripting.h  ControllerScripting.m  ControllerThreading.h  ControllerThreading.m  Coord.h  Coord.m  CutScene.h  CutScene.m  EHButton.h  EHButton.m  EHMenu.h  EHMenu.m  EHMenuItem.h  EHMenuItem.m  Forklift.h  Forklift.m  Government.h  Government.m  (+55 more)
